# shopee-async-api

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  QUICK_START.md  README.md  RELEASE_FLOW.md  check_env.py  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: auto-pr.yml  autoformat.yml  ci.yml  publish.yml
docs/memory-bank/: 00-overview.md  01-architecture.md  02-decisions.md  03-tech-context.md
examples/: demo.py
scripts/: bump_version.py  finalize_changelog.py
shopee_async_api/: __init__.py  auth.py  client.py  exceptions.py
shopee_async_api/models/: __init__.py  base.py  feeds.py  links.py  offers.py  reports.py
tests/: test_auth.py  test_client.py
